--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: rgb(37, 0, 71);
 }
 
 i{
@@ -51,3 +51,19 @@ background-color:rgb(37, 0, 71) !important;
     margin-left: 2rem;
 }
 
+.carrusel{
+
+    width: 1500px;
+    height: 500px;
+
+}
+
+.centra{
+
+    text-align: justify;
+}
+
+.card{
+    border-radius: 20px;
+    border-color: rgb(28, 135, 168);
+}
